Tryint to fix wrapping issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,7 +243,7 @@ input, select, textarea {
 	}
 
 	.divider{
-		width:100px;
+		width:300px;
 		height:auto;
 		display:inline-block;
 	}
